--- a/Hatzap Editor/App.xaml
+++ b/Hatzap Editor/App.xaml
@@ -4,10 +4,20 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
 
+        <!-- Window visual style brushes -->
         <SolidColorBrush x:Key="BackgroundColor" Color="#FF2C2C2C"/>
         <SolidColorBrush x:Key="ForegroundColor" Color="#FFE0E0E0"/>
         <SolidColorBrush x:Key="BorderColor" Color="Black"/>
         <SolidColorBrush x:Key="SelectedBackground" Color="#FF384559"/>
+        <LinearGradientBrush x:Key="BackgroundGradient" EndPoint="0.5,1" StartPoint="0.5,0">
+            <GradientStop Color="#FF1B1B1B" Offset="1"/>
+            <GradientStop Color="#FF3C3C3C"/>
+        </LinearGradientBrush>
+        
+        <!-- Icons -->
+        <Grid x:Key="appbar_folder"><Path Width="16" Height="11.8857" Canvas.Left="0" Canvas.Top="0" Stretch="Fill" Fill="{DynamicResource ForegroundColor}" Data="F1 M 21,30.0001L 55.9999,30.0001L 55.9999,50L 21,50L 21,30.0001 Z M 52,28L 37,28C 38,25 39.4999,24.0001 39.4999,24.0001L 50.75,24C 51.3023,24 52,24.6977 52,25.25L 52,28 Z "/></Grid>
+        <Grid x:Key="appbar_folder_open"><Path Width="20.11426" Height="11.8857" Canvas.Left="19" Canvas.Top="24" Stretch="Fill" Fill="{DynamicResource ForegroundColor}" Data="F1 M 19,50L 28,34L 63,34L 54,50L 19,50 Z M 19,28.0001L 35,28C 36,25 37.4999,24.0001 37.4999,24.0001L 48.75,24C 49.3023,24 50,24.6977 50,25.25L 50,28L 53.9999,28.0001L 53.9999,32L 27,32L 19,46.4L 19,28.0001 Z "/></Grid>
+        <Grid x:Key="appbar_image"><Path Width="13.86665" Height="11.8857" Canvas.Left="17" Canvas.Top="20" Stretch="Fill" Fill="{DynamicResource ForegroundColor}" Data="F1 M 17,20L 59,20L 59,56L 17,56L 17,20 Z M 20,23L 20,53L 56,53L 56,23L 20,23 Z M 24,51L 30.0833,44.3333L 33.25,47.5L 45.9167,34.8333L 50.6667,39.5833L 54,36L 54,51L 24,51 Z M 30.0833,26.9167C 30.0833,30.4145 27.2478,33.25 23.75,33.25C 23.2033,33.25 22.5061,33.1302 22,33L 22,25L 29.6666,25C 29.7968,25.5061 30.0833,26.3699 30.0833,26.9167 Z "/></Grid>
 
     </Application.Resources>
 </Application>
