--- a/Hatzap Editor/MainWindow.xaml
+++ b/Hatzap Editor/MainWindow.xaml
@@ -2,19 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Hatzap Editor" Height="720" Width="1280" Background="{DynamicResource BackgroundColor}" Foreground="{DynamicResource ForegroundColor}" Loaded="Window_Loaded" Closing="Window_Closing">
-    <Window.Resources>
-        <LinearGradientBrush x:Key="BackgroundGradient" EndPoint="0.5,1" StartPoint="0.5,0">
-            <GradientStop Color="#FF1B1B1B" Offset="1"/>
-            <GradientStop Color="#FF3C3C3C"/>
-        </LinearGradientBrush>
-    </Window.Resources>
     <DockPanel LastChildFill="True">
         <Menu DockPanel.Dock="Top" BorderThickness="0" Margin="0">
             <MenuItem Header="_File">
-                <MenuItem x:Name="MenuNewPackage" Header="_New package" />
-                <MenuItem x:Name="MenuOpenPackage" Header="_Open package" />
-                <MenuItem x:Name="MenuSavePackage" Header="_Save package" />
-                <MenuItem x:Name="MenuSavePackageAs" Header="Save package _as.." />
+                <MenuItem x:Name="MenuNewProject" Header="_New Project" />
+                <MenuItem x:Name="MenuOpenProject" Header="_Open Project" />
+                <MenuItem x:Name="MenuSaveProjectAs" Header="Save Project _as.." />
                 <Separator />
                 <MenuItem x:Name="MenuImport" Header="_Import asset">
                     <MenuItem x:Name="MenuImportMesh" Header="_Mesh" Click="MenuImportMesh_Click" />
@@ -36,6 +29,7 @@
             <TreeViewItem AllowDrop="True" >
                 <TreeViewItem.Header>
                     <StackPanel Orientation="Horizontal">
+                        <ContentControl Content="{StaticResource appbar_folder_open}" Margin="0,5,0,5" />
                         <Label Content="Assets" Foreground="{DynamicResource ForegroundColor}"></Label>
                     </StackPanel>
                 </TreeViewItem.Header>
@@ -45,6 +39,7 @@
                 <TreeViewItem>
                     <TreeViewItem.Header>
                         <StackPanel Orientation="Horizontal">
+                            <ContentControl Content="{StaticResource appbar_folder}" Margin="0,5,0,5" />
                             <Label Content="Textures" Foreground="{DynamicResource ForegroundColor}"></Label>
                         </StackPanel>
                     </TreeViewItem.Header>
@@ -52,6 +47,7 @@
                     <TreeViewItem>
                         <TreeViewItem.Header>
                             <StackPanel Orientation="Horizontal">
+                                <ContentControl Content="{StaticResource appbar_image}" Margin="0,5,0,5" />
                                 <Label Content="Texture 1" Foreground="{DynamicResource ForegroundColor}"></Label>
                             </StackPanel>
                         </TreeViewItem.Header>
@@ -61,7 +57,6 @@
         </TreeView>
         <StackPanel DockPanel.Dock="Right" Width="200" Background="{DynamicResource BackgroundColor}">
             <Label Content="Properties" Foreground="{DynamicResource ForegroundColor}" />
-            <Button Content="Load test image" Click="LoadTexture_Click"></Button>
         </StackPanel>
         <TabControl Background="{DynamicResource BackgroundColor}" Foreground="{DynamicResource ForegroundColor}" BorderBrush="{x:Null}">
             <TabControl.Resources>
